[gd_scene load_steps=9 format=3 uid="uid://dfuglhrwpha2"]

[ext_resource type="Texture2D" uid="uid://vtf7yfl2710m" path="res://Assets/UI/panel-border-030.png" id="1_ml8qj"]
[ext_resource type="Script" uid="uid://c3jpimlh4u1c0" path="res://Scripts/Components/item_combiner.gd" id="1_s2t3v"]
[ext_resource type="Theme" uid="uid://cpqqj8uayl3pq" path="res://Themes/Label.tres" id="2_s2t3v"]
[ext_resource type="Theme" uid="uid://od14ccps1daj" path="res://Themes/descriptive_label.tres" id="4_d4lnh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d4lnh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7co36"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1i5n"]
atlas = ExtResource("1_ml8qj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sxq1v"]
texture = SubResource("AtlasTexture_k1i5n")
texture_margin_left = 32.0
texture_margin_top = 32.0
texture_margin_right = 32.0
texture_margin_bottom = 32.0

[node name="ItemCombiner" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s2t3v")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -182.0
offset_right = 275.0
offset_bottom = 182.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(275, 132)
theme_override_styles/panel = SubResource("StyleBoxEmpty_d4lnh")

[node name="panelBlack" type="PanelContainer" parent="Panel"]
custom_minimum_size = Vector2(300, 150)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -124.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7co36")

[node name="panelInvalid" type="PanelContainer" parent="Panel/panelBlack"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sxq1v")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/panelBlack/panelInvalid"]
layout_mode = 2
theme = ExtResource("2_s2t3v")
theme_override_constants/separation = 10

[node name="lblName" type="Label" parent="Panel/panelBlack/panelInvalid/VBoxContainer"]
layout_mode = 2
text = "That Doesn't Work!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/panelBlack/panelInvalid/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="txtDesc" type="RichTextLabel" parent="Panel/panelBlack/panelInvalid/VBoxContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "These two items don't taste right together..."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="itemsContainer" type="GridContainer" parent="Panel/panelBlack/panelInvalid/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 5

[node name="btnBack" type="Button" parent="Panel/panelBlack/panelInvalid/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "Try Again."

[node name="panelCombiner" type="PanelContainer" parent="Panel/panelBlack"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sxq1v")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/panelBlack/panelCombiner"]
layout_mode = 2
theme = ExtResource("2_s2t3v")
theme_override_constants/separation = 10

[node name="lblName" type="Label" parent="Panel/panelBlack/panelCombiner/VBoxContainer"]
layout_mode = 2
text = "Title of Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/panelBlack/panelCombiner/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="txtDesc" type="RichTextLabel" parent="Panel/panelBlack/panelCombiner/VBoxContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "This is where it goes when it exists..."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="itemsContainer" type="GridContainer" parent="Panel/panelBlack/panelCombiner/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 10
columns = 5

[node name="CraftSlot1" type="Panel" parent="Panel/panelBlack/panelCombiner/VBoxContainer/itemsContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="itemIcon" type="TextureRect" parent="Panel/panelBlack/panelCombiner/VBoxContainer/itemsContainer/CraftSlot1"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2
expand_mode = 3

[node name="itemLabel" type="Label" parent="Panel/panelBlack/panelCombiner/VBoxContainer/itemsContainer/CraftSlot1"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -19.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_d4lnh")
theme_override_font_sizes/font_size = 14
text = "Slot 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CraftSlot2" type="Panel" parent="Panel/panelBlack/panelCombiner/VBoxContainer/itemsContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="itemIcon" type="TextureRect" parent="Panel/panelBlack/panelCombiner/VBoxContainer/itemsContainer/CraftSlot2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2
expand_mode = 3

[node name="itemLabel" type="Label" parent="Panel/panelBlack/panelCombiner/VBoxContainer/itemsContainer/CraftSlot2"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -19.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_d4lnh")
theme_override_font_sizes/font_size = 14
text = "Slot 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="boxButtons" type="HBoxContainer" parent="Panel/panelBlack/panelCombiner/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="btnSkip" type="Button" parent="Panel/panelBlack/panelCombiner/VBoxContainer/boxButtons"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
text = "Nevermind"

[node name="btnCraft" type="Button" parent="Panel/panelBlack/panelCombiner/VBoxContainer/boxButtons"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3
text = "Throw 'em in!"

[node name="panelReward" type="PanelContainer" parent="Panel/panelBlack"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_sxq1v")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/panelBlack/panelReward"]
layout_mode = 2
theme = ExtResource("2_s2t3v")
theme_override_constants/separation = 10

[node name="lblName" type="Label" parent="Panel/panelBlack/panelReward/VBoxContainer"]
layout_mode = 2
text = "Yum!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Panel/panelBlack/panelReward/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="txtDesc" type="RichTextLabel" parent="Panel/panelBlack/panelReward/VBoxContainer/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Look what I've made for you..."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="itemsContainer" type="GridContainer" parent="Panel/panelBlack/panelReward/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
columns = 5

[node name="RewardPanel" type="Panel" parent="Panel/panelBlack/panelReward/VBoxContainer/itemsContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2

[node name="itemIcon" type="TextureRect" parent="Panel/panelBlack/panelReward/VBoxContainer/itemsContainer/RewardPanel"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 100.0
grow_horizontal = 2
expand_mode = 3

[node name="itemLabel" type="Label" parent="Panel/panelBlack/panelReward/VBoxContainer/itemsContainer/RewardPanel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -19.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("4_d4lnh")
theme_override_font_sizes/font_size = 14
text = "Slot 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="btnDone" type="Button" parent="Panel/panelBlack/panelReward/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
text = "\"Thank you.\""

[connection signal="pressed" from="Panel/panelBlack/panelInvalid/VBoxContainer/btnBack" to="." method="_on_btn_back_pressed"]
[connection signal="pressed" from="Panel/panelBlack/panelCombiner/VBoxContainer/boxButtons/btnSkip" to="." method="_on_btn_skip_pressed"]
[connection signal="pressed" from="Panel/panelBlack/panelCombiner/VBoxContainer/boxButtons/btnCraft" to="." method="_on_btn_craft_pressed"]
[connection signal="pressed" from="Panel/panelBlack/panelReward/VBoxContainer/btnDone" to="." method="_on_btn_done_pressed"]
